--- a/notebooks/01_entity_management.ipynb
+++ b/notebooks/01_entity_management.ipynb
@@ -128,7 +128,7 @@
     "try:\n",
     "    entity = await pub_service.create_entity(\n",
     "        entity_data=politician_data,\n",
-    "        actor_id=\"actor:human:notebook-user\",\n",
+    "        author_id=\"author:human:notebook-user\",\n",
     "        change_description=\"Initial creation via notebook\"\n",
     "    )\n",
     "    \n",
@@ -184,7 +184,7 @@
     "    print(f\"\\nVersion Info:\")\n",
     "    print(f\"  Version: {entity.version_summary.version_number}\")\n",
     "    print(f\"  Created: {entity.version_summary.created_at}\")\n",
-    "    print(f\"  Actor: {entity.version_summary.actor.slug}\")\n",
+    "    print(f\"  Author: {entity.version_summary.author.slug}\")\n",
     "else:\n",
     "    print(f\"Entity not found: {entity_id}\")"
    ]
@@ -246,7 +246,7 @@
     "    # Update the entity\n",
     "    updated_entity = await pub_service.update_entity(\n",
     "        entity=entity,\n",
-    "        actor_id=\"actor:human:notebook-user\",\n",
+    "        author_id=\"author:human:notebook-user\",\n",
     "        change_description=\"Added ministerial position and education info\"\n",
     "    )\n",
     "    \n",
@@ -283,7 +283,7 @@
     "for version in versions:\n",
     "    print(f\"Version {version.version_number}:\")\n",
     "    print(f\"  Created: {version.created_at}\")\n",
-    "    print(f\"  Actor: {version.actor.slug}\")\n",
+    "    print(f\"  Author: {version.author.slug}\")\n",
     "    print(f\"  Description: {version.change_description or '(no description)'}\")\n",
     "    \n",
     "    # Show snapshot summary\n",
@@ -397,7 +397,7 @@
     "    try:\n",
     "        entity = await pub_service.create_entity(\n",
     "            entity_data=politician_data,\n",
-    "            actor_id=\"actor:human:notebook-user\",\n",
+    "            author_id=\"author:human:notebook-user\",\n",
     "            change_description=\"Batch creation via notebook\"\n",
     "        )\n",
     "        print(f\"✓ Created: {entity.names[0].en.full}\")\n",
