--- a/notebooks/02_relationship_management.ipynb
+++ b/notebooks/02_relationship_management.ipynb
@@ -134,7 +134,7 @@
     "                \"founding_member\": membership.get(\"founding_member\", False),\n",
     "                \"senior_leader\": membership.get(\"senior_leader\", False)\n",
     "            },\n",
-    "            actor_id=\"actor:human:notebook-user\",\n",
+    "            author_id=\"author:human:notebook-user\",\n",
     "            change_description=f\"{politician.names[0].en.full} membership in {party.names[0].en.full}\"\n",
     "        )\n",
     "        \n",
@@ -291,7 +291,7 @@
     "                \"term_length\": position.get(\"term_length\"),\n",
     "                \"term_number\": position.get(\"term_number\")\n",
     "            },\n",
-    "            actor_id=\"actor:human:notebook-user\",\n",
+    "            author_id=\"author:human:notebook-user\",\n",
     "            change_description=f\"{politician.names[0].en.full} appointed as {position['role']}\"\n",
     "        )\n",
     "        \n",
@@ -341,7 +341,7 @@
     "    \n",
     "    updated_rel = await pub_service.update_relationship(\n",
     "        relationship=rel,\n",
-    "        actor_id=\"actor:human:notebook-user\",\n",
+    "        author_id=\"author:human:notebook-user\",\n",
     "        change_description=\"Added end date for term completion\"\n",
     "    )\n",
     "    \n",
@@ -379,7 +379,7 @@
     "    for version in versions:\n",
     "        print(f\"Version {version.version_number}:\")\n",
     "        print(f\"  Created: {version.created_at}\")\n",
-    "        print(f\"  Actor: {version.actor.slug}\")\n",
+    "        print(f\"  Author: {version.author.slug}\")\n",
     "        print(f\"  Description: {version.change_description or '(no description)'}\")\n",
     "        \n",
     "        if version.snapshot:\n",
