--- a/notebooks/03_data_import_workflow.ipynb
+++ b/notebooks/03_data_import_workflow.ipynb
@@ -345,7 +345,7 @@
     "            \n",
     "            await pub_service.update_entity(\n",
     "                entity=existing,\n",
-    "                actor_id=\"actor:system:import-workflow\",\n",
+    "                author_id=\"author:system:import-workflow\",\n",
     "                change_description=\"Updated via import workflow\"\n",
     "            )\n",
     "            import_stats[\"updated\"] += 1\n",
@@ -354,7 +354,7 @@
     "            # Create new entity\n",
     "            await pub_service.create_entity(\n",
     "                entity_data=entity_data,\n",
-    "                actor_id=\"actor:system:import-workflow\",\n",
+    "                author_id=\"author:system:import-workflow\",\n",
     "                change_description=\"Imported via import workflow\"\n",
     "            )\n",
     "            import_stats[\"created\"] += 1\n",
@@ -430,7 +430,7 @@
     "\n",
     "print(f\"\\nDataset: Nepal Provinces\")\n",
     "print(f\"Import Date: {date.today()}\")\n",
-    "print(f\"Actor: actor:system:import-workflow\")\n",
+    "print(f\"Author: author:system:import-workflow\")\n",
     "\n",
     "print(f\"\\nStatistics:\")\n",
     "print(f\"  Total entities: {import_stats['total']}\")\n",
