--- a/notebooks/04_data_quality_analysis.ipynb
+++ b/notebooks/04_data_quality_analysis.ipynb
@@ -278,7 +278,7 @@
     "    \"total_versions\": 0,\n",
     "    \"entities_with_multiple_versions\": 0,\n",
     "    \"max_versions\": 0,\n",
-    "    \"actors\": defaultdict(int)\n",
+    "    \"authors\": defaultdict(int)\n",
     "}\n",
     "\n",
     "# Sample entities for version analysis\n",
@@ -296,9 +296,9 @@
     "    if version_count > version_stats[\"max_versions\"]:\n",
     "        version_stats[\"max_versions\"] = version_count\n",
     "    \n",
-    "    # Count by actor\n",
+    "    # Count by author\n",
     "    for version in versions:\n",
-    "        version_stats[\"actors\"][version.actor.slug] += 1\n",
+    "        version_stats[\"authors\"][version.author.slug] += 1\n",
     "\n",
     "print(\"Version History Statistics:\")\n",
     "print(\"=\" * 50)\n",
@@ -306,9 +306,9 @@
     "print(f\"  Entities with multiple versions: {version_stats['entities_with_multiple_versions']}\")\n",
     "print(f\"  Maximum versions for single entity: {version_stats['max_versions']}\")\n",
     "\n",
-    "print(f\"\\n  Changes by actor:\")\n",
-    "for actor, count in sorted(version_stats[\"actors\"].items(), key=lambda x: x[1], reverse=True):\n",
-    "    print(f\"    - {actor}: {count} change(s)\")"
+    "print(f\"\\n  Changes by author:\")\n",
+    "for author, count in sorted(version_stats[\"authors\"].items(), key=lambda x: x[1], reverse=True):\n",
+    "    print(f\"    - {author}: {count} change(s)\")"
    ]
   },
   {
